# PET-project-backend

./: .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pyproject.toml  test
config/: Dockerfile  ci_jobs.py  config.ini  db_schema.dbs
config/db/: data.sql  schema.sql
pet_project_backend/: app.py  config.py  config_parser.py  externals.py
pet_project_backend/api/: __init__.py  auth_controller.py  basic_controller.py  user_controller.py
pet_project_backend/model/: __init__.py  address.py  pet_carer.py  pet_owner.py  user.py  user_role.py  user_type.py
pet_project_backend/utils/: api_doc.py  api_model.py  error_handler.py  helper.py  jwt_payload.py
tests/unit/: base_test_case.py  basic_controller_test.py
tests/unit/api/: auth_controller_test.py  user_controller_test.py
tests/unit/utils/: auth_builder_test.py  auth_helper_test.py
