[tool.poetry]
name = "pet-project-backend"
version = "0.1.0"
description = "Backend API for the PET-project to manage the data of User, Pet, and Walker entities."
authors = ["g4bor <gabor.tanacs@yahoo.com>"]
readme = "README.md"
include = ["pet_project_backend/", "config/db/*.ini"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-restx = "^1.0.3"
marshmallow = "^3.19.0"
mysql = "^0.0.3"
flask-sqlalchemy = "^3.0.2"
flask-jwt-extended = "^4.4.4"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"
black = "^22.12.0"

[tool.poetry.scripts]
code_formatter = "config.ci_jobs:code_formatter"
linter = "config.ci_jobs:linter"
unittest = "config.ci_jobs:run_unittest"
build = "config.ci_jobs:build"
dev-server = "config.ci_jobs:start_dev_server"
prod-server = "config.ci_jobs:start_prod_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
